# clutter-gtk

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  clutter-gtk.doap  clutter-gtk.pc.in  configure.ac
clutter-gtk/: Makefile.am  clutter-gtk.c  clutter-gtk.h  gtk-clutter-actor-internal.h  gtk-clutter-actor.c  gtk-clutter-actor.h  gtk-clutter-embed.c  gtk-clutter-embed.h  gtk-clutter-offscreen.c  gtk-clutter-offscreen.h  gtk-clutter-scrollable.c  gtk-clutter-scrollable.h  gtk-clutter-standin-bin.c  gtk-clutter-standin-bin.h  gtk-clutter-standin-private.h  gtk-clutter-standin.c  gtk-clutter-standin.h  gtk-clutter-texture.c  gtk-clutter-util.c  gtk-clutter-util.h  gtk-clutter-version.h.in  gtk-clutter-viewport.c  gtk-clutter-viewport.h  gtk-clutter-window.c  gtk-clutter-window.h  gtk-clutter-zoomable.c  gtk-clutter-zoomable.h  gtk-clutter.c  gtk-clutter.h
doc/reference/: Makefile.am  clutter-gtk-1.0-docs.xml  clutter-gtk-1.0-sections.txt  clutter-gtk-docs.sgml  clutter-gtk-docs.xml  clutter-gtk-sections.txt  clutter-gtk.types
examples/: Makefile.am  animated-notebook.c  animated-notebook.ui  expose-test.c  gtk-clutter-events.c  gtk-clutter-multistage.c  gtk-clutter-standin-test.c  gtk-clutter-test-actor.c  gtk-clutter-test-scroll.c  gtk-clutter-test.c  gtk-clutter-viewport.c  gtk-clutter-window-test.c  gtk-clutter-window-test2.c  refcounting-test.c  reparenting-test.c  stacked-standins.c  test-scrolling.c
po/: .gitignore  Makevars  ja.po  pl.po  zh_CN.po
